styles.css
/* ... */
/* *********************************************** */

/* ****************** BODY: ****************** */

* {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
  border: 1px solid transparent;
}

body {
  display: grid;
  justify-content: center;
  font-family: var(--font-main);
  background-color: var(--bg-primary);
  color: var(--text-primary);
}
.main {
  max-width: var(--max-width-screen);
  min-width: 20dvw;
}
.display {
  display: flex;
  align-items: center;
  justify-content: center;
  text-align: center;
  gap: 4rem;
  padding: 0.8rem;
}

.below-game {
  display: flex;
  justify-content: center;
  margin-top: var(--spacing-unit);
  margin-bottom: var(--spacing-unit);
}
.instructions-container {
  display: flex;
  justify-content: center;
  flex-direction: column;
  width: fit-content;
  max-width: var(--max-width-screen, 90vw);
}

.instructions {
  margin-top: calc(var(--golden-minor) * 1rem);
  margin-bottom: calc(var(--golden-minor) * 1rem);
  text-align: center;
}

button {
  background: var(--bg-secondary);
  padding: var(--spacing-unit);
  color: var(--accent);
  aspect-ratio: var(--aspect-ratio);
  border-radius: var(--golden-minor-rem);
  border: 1.4px solid var(--text-secondary);
}

#theme-toggle {
  position: absolute;
  top: 1rem;
  right: 1rem;
  font-size: calc(var(--golden-minor) * 1rem);
  padding: calc(var(--golden-minor) * 1rem);
}

h1 {
  font-size: 4.236rem;
  margin-bottom: 1.4rem;
  margin-top: calc(var(--golden-major) * 1rem);
  text-align: center;
}

h2 {
  font-size: 1.618rem;
  text-align: center;
  margin-bottom: calc(var(--golden-major) * 1rem);
}

.actions {
  display: flex;
  justify-content: center;
  gap: var(--spacing-unit);
}

/* footer {
  font-size: 0.8rem;
  font-weight: 200;
  text-align: center;
  margin-top: 14px;
} */
/* ********************* Link style for github: ********************* */
.see-code {
  color: var(--text-primary);
}
.see-code:link {
  color: var(--accent-2);
}
.see-code:visited {
  color: var(--text-secondary);
}
.see-code:hover {
  color: var(--accent);
}
/* ********************* fut feat choose bases ********************* */
.choose-bases {
  text-align: center;
  margin-bottom: var(--spacing-unit);
}
.choose-bases p {
  margin-bottom: calc(var(--golden-minor) * 1rem);
}
.choose-bases label {
  margin: 0 calc(var(--golden-minor) * 0.5rem);
}
.choose-bases button {
  margin-top: var(--spacing-unit);
}
.base1-button {
  background-color: var(--box-light-primary);
  border: 2px solid var(--box-dark-primary);
}
.base2-button {
  background-color: var(--box-light-secondary);
  border: 2px solid var(--box-dark-secondary);
}
.base3-button {
  background-color: var(--box-light-tertiary);
  border: 2px solid var(--box-dark-tertiary);
}
.base4-button {
  background-color: var(--box-light-quaternary);
  border: 2px solid var(--box-dark-quaternary);
}
.base5-button {
  background-color: var(--box-light-quinary);
  border: 2px solid var(--box-dark-quinary);
}
.base6-button {
  background-color: var(--box-light-senary);
  border: 2px solid var(--box-dark-senary);
}
/* ********************* GRID: ********************* */
.grid-container {
  display: grid;
  /* grid-template-columns: repeat(auto-fit, minmax(100px, 1fr)); */
  grid-template-columns: repeat(8, 1fr);
  width: fit-content;
  max-width: var(
    --max-width-screen,
    90vw
  ); /* fall back to 90vw if the variable with 90dvw fails */
  place-content: center;
  place-items: center;
  gap: 25px;
  margin: 0 auto;
}

/* ****************** BLOCKS: ****************** */

.block {
  text-align: center;
  /* place-items: center;
  place-content: center; */
  /* aspect-ratio: 3/3; */
  width: 120px;
  height: 120px;
  /* min-width: var(--box-width-min-large-screens);
  max-width: var(--box-width-max-large-screens); */
  /* background-color: var(--accent-2); */
  /*   border: 1px solid white; */
  /* color: var(--box-dark-primary); */
  color: var(--text-box);
  font-size: 1.382rem;
  font-weight: 800;
  /* background-color: var(--box-light-primary);
  border: 3px solid var(--box-dark-primary); */
  /* 3D Properties */
  position: relative;
  transform-style: preserve-3d;
  transition: transform 0.5s;
  cursor: pointer;
  /* border-radius: 5px; */
}
/* .block:hover {
  background-color: var(--box-medium-primary);
  border: 3px solid var(--box-mid-dark-primary);
} */
/* ****************** COLORED BASES: ****************** */
/* *************** BASE 1: *************** */
.base1 {
  background-color: var(--box-light-primary);
  border: 3px solid var(--box-dark-primary);
}
.base1:hover {
  background-color: var(--box-medium-primary);
  border: 3px solid var(--box-mid-dark-primary);
}
/* *************** BASE 2: *************** */
.base2 {
  background-color: var(--box-light-secondary);
  border: 3px solid var(--box-dark-secondary);
}
.base2:hover {
  background-color: var(--box-medium-secondary);
  border: 3px solid var(--box-mid-dark-secondary);
}
/* *************** BASE 3: *************** */
.base3 {
  background-color: var(--box-light-tertiary);
  border: 3px solid var(--box-dark-primary);
}
.base3:hover {
  background-color: var(--box-medium-tertiary);
  border: 3px solid var(--box-mid-dark-tertiary);
}
/* *************** BASE 4: *************** */
.base4 {
  background-color: var(--box-light-quaternary);
  border: 3px solid var(--box-dark-quaternary);
}
.base4:hover {
  background-color: var(--box-medium-quaternary);
  border: 3px solid var(--box-mid-dark-quaternary);
}
/* *************** BASE 5: *************** */
.base5 {
  background-color: var(--box-light-quinary);
  border: 3px solid var(--box-dark-quinary);
}
.base5:hover {
  background-color: var(--box-medium-quinary);
  border: 3px solid var(--box-mid-dark-quinary);
}
/* *************** BASE 6: *************** */
.base6 {
  background-color: var(--box-light-senary);
  border: 3px solid var(--box-dark-senary);
}
.base6:hover {
  background-color: var(--box-medium-senary);
  border: 3px solid var(--box-mid-dark-senary);
}
/* ... */

